<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name_goodix">Goodix finger test</string>
    <string name="app_name">Fingerpirnt test</string>
    <string name="app_name_far_frr">"FRR/FAR test"</string>
    <string name="test_auto">Auto test</string>
    <string name="test_sensor">Pixel open short test</string>
    <string name="test_sensor_fine">Sensor validity test</string>
    <string name="test_pixel_open">Pixel open test</string>
    <string name="test_pixel_short_streak">Pixel short streak test</string>
    <string name="test_bad_point">Bad point test</string>
    <string name="test_pause_resume_enroll">Pause and resume enroll test</string>
    <string name="test_calibration_para_retest">CalibrationParam test</string>
    <string name="test_capture">Image quality test</string>
    <string name="test_performance">Performance test</string>
    <string name="test_spi_performance">SPI performance test</string>
    <string name="test_spi">SPI test</string>
    <string name="test_reset_pin">Reset pin test</string>
    <string name="test_interrupt_pin">Interrupt pin test</string>
    <string name="test_frr_far_management">Fingerprint management</string>
    <string name="test_frr_far_record">FRR/FAR record</string>
    <string name="test_frr_far_record_setting">Setting</string>
    <string name="test_frr_far_play">FRR/FAR test</string>
    <string name="test_frr_play">FRR test</string>
    <string name="test_far_play">FAR test</string>
    <string name="test_report_make">Test report</string>
    <string name="test_frr_far_setting">Setting</string>
    <string name="test_about">About</string>
    <string name="test_fw_version">FW version test</string>
    <string name="test_algo">Scene test</string>
    <string name="test_bio_assay">Bio assay test</string>
    <string name="test_hbd_feature">HBD test</string>
    <string name="test_rawdata_saturated">Rawdata saturation test</string>
    <string name="test_detail">Test detail</string>
    <string name="sensor_checking">Detecting sensor...</string>
    <string name="test_spi_performance_title">SPI performance test:</string>
    <string name="test_spi_performance_get_mode">Reading chip mode costs(1Byte):</string>
    <string name="test_spi_performance_get_fw">Reading fw version costs(10Bytes):</string>
    <string name="test_spi_performance_get_rawdata">Getting rawdata costs(<xliff:g example="5" id="size">%dBytes</xliff:g>):</string>
    <string name="test_spi_title">SPI test:</string>
    <string name="test_spi_fw">FW version:</string>
    <string name="test_spi_chip_id">Chip ID:</string>
    <string name="test_reset_pin_title">Reset pin test:</string>
    <string name="test_interrupt_pin_title">Interrupt pin test:</string>
    <string name="image_quality">Image Quality:</string>
    <string name="valid_area">Valid area:</string>
    <string name="key_point_num">Key point num:</string>
    <string name="increase_rate">Increase rate:</string>
    <string name="overlay">Overlay:</string>
    <string name="get_raw_data_time">Get rawdata time:</string>
    <string name="preprocess_time">Preprocess time:</string>
    <string name="get_feature_time">Get feature time:</string>
    <string name="enroll_time">Enroll time:</string>
    <string name="authenticate_time">Authenticate time:</string>
    <string name="canceled">Cancel</string>
    <string name="local_bad_pixel_num">Local bad pixel num:</string>
    <string name="avg_diff_val">average difference value:</string>
    <string name="total_bad_pixel">Total bad pixel num:</string>
    <string name="local_worst">Local worst pixel num:</string>
    <string name="local_small_bad_pixel">Local small bad pixel num:</string>
    <string name="local_big_bad_pixel">Local big bad pixel num:</string>
    <string name="feature_category">Feature category</string>
    <string name="enroll_category">Enroll category</string>
    <string name="nav_category">Navigation category</string>
    <string name="authenticate_category">Authenticate category</string>
    <string name="badpoint_category">Badpoint category</string>
    <string name="dump_category">Bump category</string>
    <string name="other_category">Other category</string>
    <string name="title_max_fingers">Max fingers</string>
    <string name="title_max_fingers_per_user">Max fingers per user</string>
    <string name="title_support_key_mode">Home key function</string>
    <string name="summary_support_key_mode">report home key code by pressing the sensor out of enroll and authenticate mode </string>
    <string name="title_support_ff_mode">Lock screen</string>
    <string name="summary_support_ff_mode">Lock screen</string>
    <string name="title_support_power_key_feature">Power key function</string>
    <string name="summary_support_power_key_feature">Report power key code by pressing the sensor without fingerprints</string>
    <string name="title_forbidden_untrusted_enroll">Forbidden untrusted enroll</string>
    <string name="summary_forbidden_untrusted_enroll">Forbidden enroll if token is incorrect</string>
    <string name="title_forbidden_enroll_duplicate_fingers">Forbidden enroll duplicate fingers</string>
    <string name="summary_forbidden_enroll_duplicate_fingers">Duplicate fingers are not allowed to enroll</string>
    <string name="title_support_bio_assay">Heart beat</string>
    <string name="title_support_performance_dump">Print performance data</string>
    <string name="summary_support_performance_dump">Print out time cost during authenticating</string>
    <string name="title_support_nav_mode">Navigation mode</string>
    <string name="title_nav_double_click_time">Double click(ms)</string>
    <string name="title_nav_long_press_time">Long press(ms)</string>
    <string name="title_enrolling_min_templates">Minimal templates</string>
    <string name="title_valid_image_quality_threshold">Image quality threshold</string>
    <string name="title_valid_image_area_threshold">Valid area threshold</string>
    <string name="title_duplicate_finger_overlay_score">Duplicate finger overlay score</string>
    <string name="title_increase_rate_between_stitch_info">Increase rate between stitch info</string>
    <string name="title_safe_class">Safe class</string>
    <string name="title_screen_on_authenticate_fail_retry_count">Authenticate retry count of screen on</string>
    <string name="title_screen_off_authenticate_fail_retry_count">Authenticate retry count of screen off</string>
    <string name="title_screen_on_valid_touch_frame_threshold">Screen on valid touch frame threshold</string>
    <string name="title_screen_off_valid_touch_frame_threshold">Screen off valid touch frame threshold</string>
    <string name="title_image_quality_threshold_for_mistake_touch">Mistake touch threshold</string>
    <string name="title_authenticate_order">Authenticate order</string>
    <string name="title_reissue_key_down_when_entry_ff_mode">FF MODE REISSUSE KEY DOWN</string>
    <string name="summary_reissue_key_down_when_entry_ff_mode">Reissue key down when entry ff mode or not?</string>
    <string name="title_reissue_key_down_when_entry_image_mode">IMAGE MODE REISSUSE KEY DOWN</string>
    <string name="summary_reissue_key_down_when_entry_image_mode">Reissue key down when entry image mode or not?</string>
    <string name="title_support_sensor_broken_check">Sensor broken check</string>
    <string name="summary_support_sensor_broken_check">Enable broken check?</string>
    <string name="title_broken_pixel_threshold_for_disable_sensor">Disable sensor threshold</string>
    <string name="title_broken_pixel_threshold_for_disable_study">Disable study threshold</string>
    <string name="title_bad_point_test_max_frame_number">Bad point rawdata frame num</string>
    <string name="title_report_key_event_only_enroll_authenticate">Report DOWN/UP event</string>
    <string name="summary_report_key_event_only_enroll_authenticate">Report DOWN/UP event for enroll and authenticate only</string>
    <string name="title_fw_cfg_download">FW config download test</string>
    <string name="title_require_down_and_up_in_pairs_for_image_mode">IMAGE MODE DOWN/UP IN PAIR</string>
    <string name="title_require_down_and_up_in_pairs_for_ff_mode">FF IMAGE MODE DOWN/UP IN PAIR</string>
    <string name="title_require_down_and_up_in_pairs_for_key_mode">KEY IMAGE MODE DOWN/UP IN PAIR</string>
    <string name="title_require_down_and_up_in_pairs_for_nav_mode">NAV IMAGE MODE DOWN/UP IN PAIR</string>
    <string name="summary_require_down_and_up_in_pairs_for_image_mode">Require DOWN/UP in pairs for image mode?</string>
    <string name="summary_require_down_and_up_in_pairs_for_ff_mode">Require DOWN/UP in pairs for ff mode?</string>
    <string name="summary_require_down_and_up_in_pairs_for_key_mode">Require DOWN/UP in pairs for key mode?</string>
    <string name="summary_require_down_and_up_in_pairs_for_nav_mode">Require DOWN/UP in pairs for nav mode?</string>
    <string name="title_support_set_spi_speed_in_tee">SPI speed change in REE/TEE</string>
    <string name="summary_support_set_spi_speed_in_tee">Support SPI speed change in TEE ?</string>
    <string name="dump_data">Dump data</string>
    <string name="dump_tip">Please ensure the internal dump config is turned on before dump data</string>
    <string name="item_dump_off">Off</string>
    <string name="item_dump_on">On</string>
    <string name="dump_templates">Dump templates</string>
    <string name="dump_path">Dump path</string>
    <string name="dump_base_frame">Dump base frame</string>
    <string name="dump_functional_test">Dump functional test</string>
    <string name="summary_dump">Dump Configuration</string>
    <string name="memmgr_feature_category">The condition switch of memory manager</string>
    <string name="title_mem_debug_enable">Debug enable</string>
    <string name="summary_mem_debug_enable">Record call information of memory allocation(file name/function name.etc.)and verify whether the memory isd damaged</string>
    <string name="title_match_best_mem_pool_enable">Optimal matching algorithm</string>
    <string name="summary_match_best_mem_pool_enable">Assign the nodes that are best suited to the requirements in all idle nodes</string>
    <string name="title_erase_mem_pool_when_free">Release memory cleared</string>
    <string name="summary_erase_mem_pool_when_free">When the memory is released, the valid space in the memory node is cleared</string>
    <string name="title_mem_time_consuming">Record memory allocation time</string>
    <string name="summary_mem_time_consuming">Record the relative time between memory allocation and memory pool initialization</string>
    <string name="memory_allocation_category">Memory pool size setting</string>
    <string name="title_application_memory">Memory pool size(MB)</string>
    <string name="title_mem_enable_config">Defaultly boot memory management</string>
    <string name="summary_mem_enable_config">Open the memory management function after each reboot</string>
    <string name="memmgr_nodes_callstack">Call Stack</string>
    <string name="memmgr_nodes_status">Status</string>
    <string name="memmgr_nodes_addr">Address(B)</string>
    <string name="memmgr_nodes_size">Size(B)</string>
    <string name="memmgr_nodes_used_size">Used Size(B)</string>
    <string name="memmgr_nodes_timestamp">Time(s)</string>
    <string name="title_template_update_save_threshold">Template update save threshold</string>
    <string name="swipe_enroll_category">Swipe Enroll</string>
    <string name="summary_swipe_enroll_switch">Enable or disable swipe enroll</string>
    <string name="title_swipe_enroll_switch">Enable swipe enroll</string>
    <string name="total_bad_gradient">Total bad point gradient</string>
    <string name="local_bad_gradient">Local bad point gradient</string>
    <string name="local_worst_gradient">Local worst bad point gradient</string>
</resources>