<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013-2017, Shenzhen Huiding Technology Co., Ltd.
  All Rights Reserved.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="mem_feature"
        android:layout="@layout/preference_category"
        android:title="@string/memmgr_feature_category" >
        <SwitchPreference
            android:key="mem_debug_enable"
            android:summary="@string/summary_mem_debug_enable"
            android:title="@string/title_mem_debug_enable" />
        <SwitchPreference
            android:key="match_best_mem_pool_enable"
            android:summary="@string/summary_match_best_mem_pool_enable"
            android:title="@string/title_match_best_mem_pool_enable" />
        <SwitchPreference
            android:key="erase_mem_pool_when_free"
            android:summary="@string/summary_erase_mem_pool_when_free"
            android:title="@string/title_erase_mem_pool_when_free" />
        <SwitchPreference
            android:key="mem_time_consuming"
            android:summary="@string/summary_mem_time_consuming"
            android:title="@string/title_mem_time_consuming" />
        <SwitchPreference
            android:key="mem_enable_config"
            android:summary="@string/summary_mem_enable_config"
            android:title="@string/title_mem_enable_config" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="application_memory"
        android:layout="@layout/preference_category"
        android:title="@string/memory_allocation_category" >
        <ListPreference
            android:key="mem_manager_pool_size"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_application_memory" />
    </PreferenceCategory>

</PreferenceScreen>