<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013-2016, Shenzhen Huiding Technology Co., Ltd.
  All Rights Reserved.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="key_fw_cfg_download"
        android:title="@string/title_fw_cfg_download" >
        <intent
            android:targetClass="com.goodix.gftest.DownloadFwCfgTestActivity"
            android:targetPackage="com.goodix.gftest" />
    </PreferenceScreen>

    <PreferenceCategory
        android:key="feature"
        android:layout="@layout/preference_category"
        android:title="@string/feature_category" >
        <ListPreference
            android:key="key_max_fingers"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_max_fingers" />
        <ListPreference
            android:key="key_max_fingers_per_user"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_max_fingers_per_user" />

        <SwitchPreference
            android:key="key_support_key_mode"
            android:summary="@string/summary_support_key_mode"
            android:title="@string/title_support_key_mode" />
        <SwitchPreference
            android:key="key_support_ff_mode"
            android:summary="@string/summary_support_ff_mode"
            android:title="@string/title_support_ff_mode" />
        <SwitchPreference
            android:dependency="key_support_ff_mode"
            android:key="key_support_power_key_feature"
            android:summary="@string/summary_support_power_key_feature"
            android:title="@string/title_support_power_key_feature" />
        <SwitchPreference
            android:key="key_forbidden_untrusted_enroll"
            android:summary="@string/summary_forbidden_untrusted_enroll"
            android:title="@string/title_forbidden_untrusted_enroll" />
        <SwitchPreference
            android:key="key_forbidden_enroll_duplicate_fingers"
            android:summary="@string/summary_forbidden_enroll_duplicate_fingers"
            android:title="@string/title_forbidden_enroll_duplicate_fingers" />
        <SwitchPreference
            android:key="key_support_bio_assay"
            android:title="@string/title_support_bio_assay" />
        <SwitchPreference
            android:key="key_support_performance_dump"
            android:summary="@string/summary_support_performance_dump"
            android:title="@string/title_support_performance_dump" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="nav"
        android:layout="@layout/preference_category"
        android:title="@string/nav_category" >

        <ListPreference
            android:entries="@array/support_nav_mode_entries"
            android:entryValues="@array/support_nav_mode_entry_values"
            android:key="key_support_nav_mode"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_support_nav_mode" />

        <ListPreference
            android:entries="@array/nav_double_click_time_entries"
            android:entryValues="@array/nav_double_click_time_entry_values"
            android:key="key_nav_double_click_time"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_nav_double_click_time" />

        <ListPreference
            android:entries="@array/nav_long_press_time_entries"
            android:entryValues="@array/nav_long_press_time_entry_values"
            android:key="key_nav_long_press_time"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_nav_long_press_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="enroll"
        android:layout="@layout/preference_category"
        android:title="@string/enroll_category" >
        <ListPreference
            android:key="key_enrolling_min_templates"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_enrolling_min_templates" />
        <ListPreference
            android:entries="@array/array_max"
            android:entryValues="@array/array_max"
            android:key="key_valid_image_quality_threshold"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_valid_image_quality_threshold" />
        <ListPreference
            android:entries="@array/array_max"
            android:entryValues="@array/array_max"
            android:key="key_valid_image_area_threshold"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_valid_image_area_threshold" />
        <ListPreference
            android:key="key_duplicate_finger_overlay_score"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_duplicate_finger_overlay_score" />
        <ListPreference
            android:key="key_increase_rate_between_stitch_info"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_increase_rate_between_stitch_info" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="authenticate"
        android:layout="@layout/preference_category"
        android:title="@string/authenticate_category" >
        <ListPreference
            android:entries="@array/safe_class_entries_for_milan_series"
            android:entryValues="@array/safe_class_entry_values_for_milan_series"
            android:key="key_safe_class"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_safe_class" />
        <ListPreference
            android:entries="@array/authenticate_fail_retry_count"
            android:entryValues="@array/authenticate_fail_retry_count"
            android:key="key_screen_on_authenticate_fail_retry_count"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_screen_on_authenticate_fail_retry_count" />
        <ListPreference
            android:entries="@array/authenticate_fail_retry_count"
            android:entryValues="@array/authenticate_fail_retry_count"
            android:key="key_screen_off_authenticate_fail_retry_count"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_screen_off_authenticate_fail_retry_count" />
        <ListPreference
            android:entries="@array/valid_touch_frame_threshold"
            android:entryValues="@array/valid_touch_frame_threshold"
            android:key="key_screen_on_valid_touch_frame_threshold"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_screen_on_valid_touch_frame_threshold" />
        <ListPreference
            android:entries="@array/valid_touch_frame_threshold"
            android:entryValues="@array/valid_touch_frame_threshold"
            android:key="key_screen_off_valid_touch_frame_threshold"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_screen_off_valid_touch_frame_threshold" />
        <ListPreference
            android:entries="@array/image_quality_threshold_for_mistake_touch"
            android:entryValues="@array/image_quality_threshold_for_mistake_touch"
            android:key="key_image_quality_threshold_for_mistake_touch"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_image_quality_threshold_for_mistake_touch" />
        <ListPreference
            android:entries="@array/authenticate_order_entries"
            android:entryValues="@array/authenticate_order_entry_values"
            android:key="key_authenticate_order"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_authenticate_order" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="badpoint"
        android:layout="@layout/preference_category"
        android:title="@string/badpoint_category">
        <EditTextPreference
            android:key="key_bad_point_avg_diff_val_threshold"
            android:title="@string/avg_diff_val"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_local_small_bad_pixel_threshold"
            android:title="@string/local_small_bad_pixel"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="key_bad_point_local_big_bad_pixel_threshold"
            android:title="@string/local_big_bad_pixel"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_total_bad_pixel_num_threshold"
            android:title="@string/total_bad_pixel"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_local_bad_pixel_num_threshold"
            android:title="@string/local_bad_pixel_num"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_local_worst_num_threshold"
            android:title="@string/local_worst"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_total_gradient"
            android:title="@string/total_bad_gradient"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_local_gradient"
            android:title="@string/local_bad_gradient"
            android:numeric="integer"
            />

        <EditTextPreference
            android:key="key_bad_point_local_worst_gradient"
            android:title="@string/local_worst_gradient"
            android:numeric="integer"
            />

        <ListPreference
            android:entries="@array/bad_point_test_max_frame_number"
            android:entryValues="@array/bad_point_test_max_frame_number"
            android:key="key_bad_point_test_max_frame_number"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_bad_point_test_max_frame_number" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="dump"
        android:layout="@layout/preference_category"
        android:title="@string/dump_category" >
        <PreferenceScreen
            android:key="key_dump_config"
            android:summary="@string/summary_dump"
            android:title="@string/dump_functional_test">
            <intent
                android:targetClass="com.goodix.gftest.DumpFunctionalTestActivity"
                android:targetPackage="com.goodix.gftest" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="swipe_enroll"
        android:layout="@layout/preference_category"
        android:title="@string/swipe_enroll_category" >
        <SwitchPreference
            android:key="key_swipe_enroll_switch"
            android:summary="@string/summary_swipe_enroll_switch"
            android:title="@string/title_swipe_enroll_switch" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="other"
        android:layout="@layout/preference_category"
        android:title="@string/other_category" >
        <SwitchPreference
            android:key="key_reissue_key_down_when_entry_ff_mode"
            android:summary="@string/summary_reissue_key_down_when_entry_ff_mode"
            android:title="@string/title_reissue_key_down_when_entry_ff_mode" />
        <SwitchPreference
            android:key="key_reissue_key_down_when_entry_image_mode"
            android:summary="@string/summary_reissue_key_down_when_entry_image_mode"
            android:title="@string/title_reissue_key_down_when_entry_image_mode" />
        <SwitchPreference
            android:key="key_support_sensor_broken_check"
            android:summary="@string/summary_support_sensor_broken_check"
            android:title="@string/title_support_sensor_broken_check" />

        <ListPreference
            android:dependency="key_support_sensor_broken_check"
            android:entries="@array/array_broken_check_disable_sensor"
            android:entryValues="@array/array_broken_check_disable_sensor"
            android:key="key_broken_pixel_threshold_for_disable_sensor"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_broken_pixel_threshold_for_disable_sensor" />
        <ListPreference
            android:dependency="key_support_sensor_broken_check"
            android:entries="@array/array_broken_check_disable_study"
            android:entryValues="@array/array_broken_check_disable_study"
            android:key="key_broken_pixel_threshold_for_disable_study"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_broken_pixel_threshold_for_disable_study" />

        <SwitchPreference
            android:key="key_report_key_event_only_enroll_authenticate"
            android:summary="@string/summary_report_key_event_only_enroll_authenticate"
            android:title="@string/title_report_key_event_only_enroll_authenticate" />
        <SwitchPreference
            android:key="key_require_down_and_up_in_pairs_for_image_mode"
            android:summary="@string/summary_require_down_and_up_in_pairs_for_image_mode"
            android:title="@string/title_require_down_and_up_in_pairs_for_image_mode" />
        <SwitchPreference
            android:key="key_require_down_and_up_in_pairs_for_ff_mode"
            android:summary="@string/summary_require_down_and_up_in_pairs_for_ff_mode"
            android:title="@string/title_require_down_and_up_in_pairs_for_ff_mode" />
        <SwitchPreference
            android:key="key_require_down_and_up_in_pairs_for_key_mode"
            android:summary="@string/summary_require_down_and_up_in_pairs_for_key_mode"
            android:title="@string/title_require_down_and_up_in_pairs_for_key_mode" />
        <SwitchPreference
            android:key="key_require_down_and_up_in_pairs_for_nav_mode"
            android:summary="@string/summary_require_down_and_up_in_pairs_for_nav_mode"
            android:title="@string/title_require_down_and_up_in_pairs_for_nav_mode" />
        <SwitchPreference
            android:key="key_support_set_spi_speed_in_tee"
            android:summary="@string/summary_support_set_spi_speed_in_tee"
            android:title="@string/title_support_set_spi_speed_in_tee" />
        <ListPreference
            android:entries="@array/template_update_save_threshold"
            android:entryValues="@array/template_update_save_threshold"
            android:key="key_template_update_save_threshold"
            android:negativeButtonText="@string/canceled"
            android:title="@string/title_template_update_save_threshold" />
    </PreferenceCategory>

</PreferenceScreen>
