<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013-2017, Shenzhen Huiding Technology Co., Ltd.
  All Rights Reserved.
-->

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/list_nodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nodes_status"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/memmgr_nodes_status"
                android:textColor="#FF0000"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:id="@+id/nodes_addr"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/memmgr_nodes_addr"
                android:textColor="#FF0000"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:id="@+id/nodes_size"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/memmgr_nodes_size"
                android:textColor="#FF0000"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:id="@+id/nodes_used_size"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/memmgr_nodes_used_size"
                android:textColor="#FF0000"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:id="@+id/node_timestamp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/memmgr_nodes_timestamp"
                android:textColor="#FF0000"
                android:textSize="14sp" >
            </TextView>

            <TextView
                android:id="@+id/node_callstack"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/memmgr_nodes_callstack"
                android:textColor="#FF0000"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>

        <ListView
            android:id="@+id/node_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false" />
    </LinearLayout>

</HorizontalScrollView>